# Paterns

./: README.md
c/: AbstractFactory.c  AbstractFactory.h  AbstractFactoryUse.c  CMakeLists.txt  Decorator.c  Factory.c  Singelton_SingleThread.c
c++/: Adapter.cpp  CMakeLists.txt  Prototype.cpp
